<resources>
    <string name="app_name">NMedia</string>
    <string name="name_with_mark">NMedia!</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="published">May 21 at 18:36</string>
    <string name="content">Hello, this is the new Netology! Once Netology began with online marketing intensives. Then came design courses, development, analytics and management. We grow ourselves and help you grow students: from beginners to confident professionals. But the most important thing remains with us: we believe that in everyone already has a power that makes you want more, aim higher, run faster. Our mission is to help get up on the path of growth and start the chain of change → <a href="http://netolo.gy/fyb">http://netolo.gy/fyb</a></string>
    <string name="like_count" translatable="false">10</string>
    <string name="share_count" translatable="false">5</string>
    <string name="view_count" translatable="false">5</string>
    <string name="post_text">Post text</string>
    <string name="remove">Remove</string>
    <string name="now">Now</string>
    <string name="error_empty_text">Content can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="edit_post">Edit post content</string>
    <string name="add_post">Add Post</string>
    <string name="edit_post_image">Edit</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="share_post">Share</string>
    <string name="views" translatable="false">views</string>
    <string name="retry_text">Error! Try again</string>
    <string name="retry">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="menu_refresh">Refresh</string>
    <string name="network_problems">There is no internet connection. Please try later</string>
    <string name="unknown_problems">Unknown problem! Try again</string>
    <string name="newer_posts">New posts</string>
    <string name="delete_photo">Delete photo</string>
    <string name="error_photo">Failed to upload photo! Try again</string>
    <string name="error_show_photo">Failed to upload photo! Please try later</string>
    <string name="return_back">Return</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sing Out</string>
    <string name="sign_in_header"><b>Sign in to NMedia</b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_header"><b>Sign up to NMedia</b></string>
    <string name="avatar">Photo or picture</string>
    <string name="add_an_avatar">Add an avatar</string>
    <string name="empty_login_or_password">Login and password can\'t be empty</string>
    <string name="login_or_password_are_wrong">Login or password entered incorrectly</string>
    <string name="dialog_text">You must be logged in to perform this action</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="dont_have_account">If you don\'t have an account, sign up</string>
    <string name="input_fields_empty">Input fields cannot be empty</string>
    <string name="passwords_didnt_match">Those passwords didn’t match. Try again</string>
    <string name="google_api_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>