<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/signInHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_header"
        android:textSize="@dimen/third_sp"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginBottom="@dimen/second_dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/userLogin"
        android:layout_width="@dimen/two_hundred_seventy_dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:layout_marginBottom="@dimen/first_dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/first_dp"

        />
    <EditText
        android:id="@+id/userPassword"
        android:layout_width="@dimen/two_hundred_seventy_dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/second_dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/first_dp"
        />
    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/third_dp"
        android:layout_height="@dimen/third_dp"
        android:layout_marginTop="@dimen/first_dp"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/dont_have_account"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/first_dp"
        android:layout_gravity="center"/>
</LinearLayout>