<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/second_dp"
        android:paddingVertical="@dimen/second_dp"
        android:src="@drawable/ic_netelogy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        android:layout_marginStart="@dimen/second_dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/moreButton"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintBottom_toTopOf="@+id/published"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published"
        android:layout_marginStart="@dimen/second_dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_goneMarginStart="@dimen/second_dp"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"/>

    <ImageButton
        android:id="@+id/moreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_margin="@dimen/second_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/firstBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published,moreButton" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:layout_marginTop="@dimen/first_dp"
        android:layout_marginHorizontal="@dimen/second_dp"
        android:paddingBottom="@dimen/second_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstBarrier" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_marginStart="@dimen/second_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_count"
        android:layout_marginStart="@dimen/first_dp"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/like" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_share_24"
        android:layout_marginStart="@dimen/second_dp"
        app:layout_constraintStart_toEndOf="@+id/likeCount"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/shareCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_count"
        android:layout_marginStart="@dimen/first_dp"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <ImageButton
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:layout_marginEnd="@dimen/first_dp"
        app:layout_constraintEnd_toStartOf="@+id/viewCount"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_count"
        android:layout_marginEnd="@dimen/second_dp"
        android:paddingBottom="@dimen/second_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/share"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/secondBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        android:layout_marginBottom="@dimen/second_dp"
        app:constraint_referenced_ids="like,likeCount,share,shareCount,view,viewCount" />



</androidx.constraintlayout.widget.ConstraintLayout>